setting up serializer

--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
@@ -52,6 +52,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BusTrackerClientTests.cs" />
+    <Compile Include="Resources\ResourceFiles.cs" />
+    <Compile Include="Resources\ResourceRepository.cs" />
+    <Compile Include="Resources\ResourceRepositoryTests.cs" />
+    <Compile Include="SerializerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\GetTime\gettime-response.xml" />
