--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
@@ -42,10 +42,17 @@
     <Compile Include="GetTimeResponse.cs" />
     <Compile Include="BusTrackerClient.cs" />
     <Compile Include="GetTimeError.cs" />
+    <Compile Include="GetVehiclesError.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="GetVehiclesResponse.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="IBusTrackerClient.cs" />
     <Compile Include="ISerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializer.cs" />
+    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
