--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetRoutesError.cs" />
+    <Compile Include="GetRoutesResponse.cs" />
     <Compile Include="GetTimeResponse.cs" />
     <Compile Include="BusTrackerClient.cs" />
     <Compile Include="GetTimeError.cs" />
@@ -51,6 +53,7 @@
     <Compile Include="IBusTrackerClient.cs" />
     <Compile Include="ISerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Route.cs" />
     <Compile Include="Serializer.cs" />
     <Compile Include="Vehicle.cs" />
   </ItemGroup>
