refactored tests into partials

--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
@@ -68,12 +68,16 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BusTrackerClientTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="BusTrackerClientTests.GetTimeAsync.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BusTrackerClientTests.cs" />
     <Compile Include="Resources\ResourceFiles.cs" />
     <Compile Include="Resources\ResourceRepository.cs" />
     <Compile Include="Resources\ResourceRepositoryTests.cs" />
     <Compile Include="SerializerTests.cs" />
+    <Compile Include="BusTrackerClientTests.GetTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\GetRoutes\getroutes-response.xml" />
