--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
@@ -71,6 +71,7 @@
     <Compile Include="BusTrackerClientTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BusTrackerClientTests.GetRoutes.cs" />
     <Compile Include="BusTrackerClientTests.GetTimeAsync.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\ResourceFiles.cs" />
