--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
@@ -56,6 +56,8 @@
     </Compile>
     <Compile Include="GetRoutesError.cs" />
     <Compile Include="GetRoutesResponse.cs" />
+    <Compile Include="GetStopsResponse.cs" />
+    <Compile Include="GetStopsResponseError.cs" />
     <Compile Include="GetTimeResponse.cs" />
     <Compile Include="BusTrackerClient.cs" />
     <Compile Include="GetTimeError.cs" />
@@ -71,6 +73,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Route.cs" />
     <Compile Include="Serializer.cs" />
+    <Compile Include="Stop.cs" />
     <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
