--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
@@ -73,6 +73,7 @@
     </Compile>
     <Compile Include="BusTrackerClientTests.GetRouteDirections.cs" />
     <Compile Include="BusTrackerClientTests.GetRoutes.cs" />
+    <Compile Include="BusTrackerClientTests.GetStops.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\ResourceFiles.cs" />
     <Compile Include="Resources\ResourceRepository.cs" />
