--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BusTrackerClient.GetRoutes.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BusTrackerClient.GetStops.cs" />
     <Compile Include="BusTrackerClient.GetTime.cs">
       <SubType>Code</SubType>
     </Compile>
