add prediction model

--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests/TransitSocial.ChicagoTransitAuthority.BusTracker.Tests.csproj
@@ -116,6 +116,10 @@
     <EmbeddedResource Include="Resources\GetStops\getstops-response-invalidapiaccess.xml" />
     <EmbeddedResource Include="Resources\GetStops\getstops-response.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\GetPredictions\getpredictions-response.xml" />
+    <EmbeddedResource Include="Resources\GetPredictions\getpredictions-response-invalidapiaccess.xml" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
