--- a/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
+++ b/src/TransitSocial.ChicagoTransitAuthority.BusTracker/TransitSocial.ChicagoTransitAuthority.BusTracker.csproj
@@ -51,6 +51,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="BusTrackerClient.GetVehicles.cs" />
+    <Compile Include="GetPredictionsResponse.cs" />
+    <Compile Include="GetPredictionsResponseError.cs" />
     <Compile Include="GetRouteDirectionError.cs" />
     <Compile Include="GetRouteDirectionsResponse.cs">
       <SubType>Code</SubType>
@@ -71,6 +73,7 @@
     <Compile Include="HttpWebRequestExtensions.cs" />
     <Compile Include="IBusTrackerClient.cs" />
     <Compile Include="ISerializer.cs" />
+    <Compile Include="Prediction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Route.cs" />
     <Compile Include="Serializer.cs" />
